added grid to work and ed

--- a/resume.html
+++ b/resume.html
@@ -26,22 +26,24 @@ Over 10 years of successful public and private sector experience with superior p
 
         <h3>Work Experience</h3>
           <hr>
-        <div class="workcontainer">
-            <div class="block">
-              <div>from 01/202 - present</div>
-              <div>
-                <div class="block-title"><b>Owner / Founder</b> - at <i>EALA APPAREL, Emden, Germany</i></div>
-                    <ul>
+
+            <div class="block workcontainer">
+              <div class="grid-item1">from 01/202 - present</div>
+                <div class="grid-item2">
+                  <b>Owner / Founder</b> - at <i>EALA APPAREL, Emden, Germany</i>
+
+                </div>
+                    <ul class="grid-item2 paddown">
                       <li>■ Designing of fashion and accessories</li>
                       <li>■ Online-retail of self-designed fashion and accessories</li>
                     </ul>
                 </div>
             </div>
             <br>
-          <div class="block">
-            <div class="box-date">from 10/2017 - 04/2020</div>
+          <div class="block workcontainer">
+            <div class="grid-item3">from 10/2017 - 04/2020</div>
             <div class="block-title grid-item4"><b>Data Protection Officer / Upstalsboomer</b> - at <i>Upstalsboom Hotel + Freizeit GmbH & Co. KG, Emden, Germany</i></div>
-            <ul>
+            <ul class="grid-item4 paddown">
               <li>■ Creating and building of a complete privacy management system for the Company Group incl. training the staff on privacy regulations</li>
               <li>■ Personal coaching and consulitng and personality development (personal mission statement)</li>
               <li> ■ Member of the corporate ‘culture and HR team’</li>
@@ -52,10 +54,10 @@ Over 10 years of successful public and private sector experience with superior p
               <li>■ Member of the group of internal and public speakers of the company</li>
             </ul>
           </div>
-          <div class="block">
-            <div class="box-date">from 08/2011 - 09/2017</div>
-            <div class="block-title"><b>Head of Administration (from 03/2014 Deputy Leader)</b> - at <i>Public Health Office of the County Administration, Emden, Germany</i></div>
-            <ul>
+          <div class="block workcontainer">
+            <div class="grid-item5">from 08/2011 - 09/2017</div>
+            <div class="grid-item6"><b>Head of Administration (from 03/2014 Deputy Leader)</b> - at <i>Public Health Office of the County Administration, Emden, Germany</i></div>
+            <ul class="grid-item6 paddown">
               <li>■ Responsible for HR management and administration</li>
               <li>■ Recruiting, sourcing, interviewing, hiring, contract management, onboarding, offboarding, personnel organization</li>
               <li>■ Managing the budget (P&L – 2.5 Mio. EUR) and accounting</li>
@@ -65,55 +67,64 @@ Over 10 years of successful public and private sector experience with superior p
               <li>■ Responsible for all other administrative matters concerning the public health</li>
             </ul>
           </div>
-
-        </div>
       <h3>education/certificates</h3>
       <hr>
-      <div class="block">
-        <div class="block-title"><b>Leadership Curriculum</b> - at <i>Upstalsboom-Curriculum; Upstalsboom Hotel + Freizeit GmbH & Co. KG, Emden, Germany</i></div>
-        <div class="box-date">from 09/2018 - 06/2019</div>
-        <p>A personal and entrepreneurial development journey in the field of
+
+      <div class="block edcontainer">
+        <div class="box-date ed-item1">from 09/2018 - 06/2019</div>
+        <div class="block-title ed-item2"><b>Leadership Curriculum</b> - at <i>Upstalsboom-Curriculum; Upstalsboom Hotel + Freizeit GmbH & Co. KG, Emden, Germany</i></div>
+        <p class="ed-item2 paddown">A personal and entrepreneurial development journey in the field of
         conflict of the rule of the hl. Benedikt to the latest findings of brain research and positive
         psychology. Contents of the modules are "The Upstalsboom Way", "Body, Mind and Language
         Awareness", "Mindfulness – Self-Perception and Self-Awareness", "The Personal Mission
         Statement", "Humanity - Empathy and Compassion" and "Leadership is Service".
       </p>
       </div>
-      <div class="block">
-        <div class="block-title"><b>Coaching Curriculum - Module 1</b> - at <i>Team Benedikt, Würzburg, Germany</i></div>
-        <div class="box-date">03/2018</div>
-        <p>Training as Business Coach - Module 1</p>
+
+      <div class="block edcontainer">
+        <div class="box-date ed-item3">03/2018</div>
+        <div class="block-title ed-item4"><b>Coaching Curriculum - Module 1</b> - at <i>Team Benedikt, Würzburg, Germany</i></div>
+        <p class="ed-item4 paddown">Training as Business Coach - Module 1</p>
       </div>
-      <div class="block">
-        <div class="block-title"><b>“Klare Führung durch bewusste Sprache (Clear guidance through conscious language)”</b> - at <i>Team
+
+      <div class="block edcontainer">
+        <div class="box-date ed-item5">11/2017</div>
+        <div class="block-title ed-item6"><b>“Klare Führung durch bewusste Sprache (Clear guidance through conscious language)”</b> - at <i>Team
             Benedikt, Würzburg, Germany</i></div>
-        <div class="box-date">11/2017</div>
-        <p>A professional approach to language as a success factor. Through conscious speech you
+        <p class="ed-item6 paddown">A professional approach to language as a success factor. Through conscious speech you
         promote clarity and motivation. The prerequisite is that your own thinking and language habits are
         reflected. The concept of conscious language combines linguistic expressions with inner attitude.
         </p>
       </div>
-      <div class="block">
-        <div class="block-title"><b>„Potentialentfaltung und Kommuniaktion: 4 Tage intensiven Wachstums (Potential development
-and communication 4 days of intensive growth)”</b> - at <i>Sebastian Purps-Pardigol, Aschaffenburg,
-Germany</i></div>
-        <div class="box-date">10/2017</div>
-        <p>How to develop your own potential more - so that you can grow beyond yourself again as well as
+
+      <div class="block edcontainer">
+        <div class="box-date ed-item7">10/2017</div>
+        <div class="block-title ed-item8"><b>„Potentialentfaltung und Kommuniaktion: 4 Tage intensiven Wachstums (Potential development
+                  and communication 4 days of intensive growth)”</b> - at <i>Sebastian Purps-Pardigol, Aschaffenburg,
+                  Germany</i>
+        </div>
+        <p class="ed-item8 paddown">How to develop your own potential more - so that you can grow beyond yourself again as well as
           how to support your employees and colleagues to develop their potential better - so that these
           people can grow beyond themselves again.
         </p>
       </div>
-      <div class="block">
-        <div class="block-title"><b>„Fit für die Zukunft“</b> - at <i>Public Administration of Emden, Germany</i></div>
-        <div class="box-date">from 10/2019 - 09/2017</div>
-        <p>Leadership-Training series for executive managers and executives at the public administration of Emden</p>
+
+      <div class="block edcontainer">
+        <div class="box-date ed-item9">from 10/2019 - 09/2017</div>
+        <div class="block-title ed-item10"><b>„Fit für die Zukunft“</b> - at <i>Public Administration of Emden, Germany</i></div>
+        <p class="ed-item10 paddown">Leadership-Training series for executive managers and executives at the public administration of Emden</p>
       </div>
-      <div class="block">
-        <div class="block-title"><b>German Diploma (FH) Administrative and Business Management (equivalent to a Bachelor
-Degree in Business Administration)</b> - at <i>Public Administration of Emden and
-“Kommunale Fachhochschule für Verwaltung in Niedersachen”, Hannover, Germany, Germany</i></div>
-        <div class="box-date">from 08/2005 - 07/2008</div>
+
+      <div class="block edcontainer">
+        <div class="box-date ed-item11">from 08/2005 - 07/2008</div>
+        <div class="block-title ed-item12"><b>German Diploma (FH) Administrative and Business Management (equivalent to a Bachelor
+                  Degree in Business Administration)</b> - at <i>Public Administration of Emden and
+                  “Kommunale Fachhochschule für Verwaltung in Niedersachen”, Hannover, Germany, Germany</i></div>
+
       </div>
+
+
+
       <h3>skills</h3>
       <hr>
       <div class="block">
