--- a/resume.html
+++ b/resume.html
@@ -137,6 +137,12 @@ Over 10 years of successful public and private sector experience with superior p
                     <li>Public Management, &nbsp;</li>
                     <li>Data Protection, &nbsp;</li>
                     <li>Coaching, &nbsp;</li>
+                    <li>HR Management, &nbsp;</li>
+                    <li>Recruiting, &nbsp;</li>
+                    <li>Resilience, &nbsp;</li>
+                    <li>Reliability, &nbsp;</li>
+                    <li>Empathy, &nbsp;</li>
+                    <li>Dedication, &nbsp;</li>
           </ul>
       </div>
 
