--- a/resume.html
+++ b/resume.html
@@ -155,7 +155,7 @@ Over 10 years of successful public and private sector experience with superior p
           <li>German (native)</li>
           <li>English (proficient)</li>
           <li>Dutch (advanced)</li>
-          <li>French (elemtary)</li>
+          <li>French (elementary)</li>
         </ul>
       </div>
       <h3>interests</h3>
