add coding school experience

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@ Over 10 years of successful public and private sector experience with superior p
           <hr>
 
             <div class="block workcontainer">
-              <div class="grid-item1">from 01/2020 - present</div>
+              <div class="grid-item1">01/2020 - present</div>
                 <div class="grid-item2">
                   <b>Owner / Founder</b> - at <i>EALA APPAREL, Emden, Germany</i>
 
@@ -41,7 +41,7 @@ Over 10 years of successful public and private sector experience with superior p
             </div>
             <br>
           <div class="block workcontainer">
-            <div class="grid-item3">from 10/2017 - 04/2020</div>
+            <div class="grid-item3">10/2017 - 04/2020</div>
             <div class="block-title grid-item4"><b>Data Protection Officer / Upstalsboomer</b> - at <i>Upstalsboom Hotel + Freizeit GmbH & Co. KG, Emden, Germany</i></div>
             <ul class="grid-item4 paddown">
               <li>■ Creating and building of a complete privacy management system for the Company Group incl. training the staff on privacy regulations</li>
@@ -55,7 +55,7 @@ Over 10 years of successful public and private sector experience with superior p
             </ul>
           </div>
           <div class="block workcontainer">
-            <div class="grid-item5">from 08/2011 - 09/2017</div>
+            <div class="grid-item5">08/2011 - 09/2017</div>
             <div class="grid-item6"><b>Head of Administration (from 03/2014 Deputy Leader)</b> - at <i>Public Health Office of the County Administration, Emden, Germany</i></div>
             <ul class="grid-item6 paddown">
               <li>■ Responsible for HR management and administration</li>
@@ -71,9 +71,18 @@ Over 10 years of successful public and private sector experience with superior p
       <hr>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item1">from 09/2018 - 06/2019</div>
-        <div class="block-title ed-item2"><b>Leadership Curriculum</b> - at <i>Upstalsboom-Curriculum; Upstalsboom Hotel + Freizeit GmbH & Co. KG, Emden, Germany</i></div>
-        <p class="ed-item2 paddown">A personal and entrepreneurial development journey in the field of
+        <div class="box-date ed-item1">06/2020 - 09/2020</div>
+        <div class="block-title ed-item2"><b>Full-Stack Web & App Development Bootcamp</b> - at <i>WBS Coding School, Remote & Berlin, Germany</i></div>
+        <p class="ed-item2 paddown">Web and App development course to become  a fully operational Full-Stack Web & App Developer in 15 weeks incl. HTML5,
+          CSS3, Vanilla JavaScript (Fundamentals,DOM, OOP), REACT.js (Fundamentals, Hooks, Context), Redux, Node.js, Overview APIs (REST, GraphQL), Database (SQL, NoSQL),
+          Console, Git and Github, modile development (React Native), Desktop applications (Electron) and more.
+      </p>
+      </div>
+
+      <div class="block edcontainer">
+        <div class="box-date ed-item3">09/2018 - 06/2019</div>
+        <div class="block-title ed-item4"><b>Leadership Curriculum</b> - at <i>Upstalsboom-Curriculum; Upstalsboom Hotel + Freizeit GmbH & Co. KG, Emden, Germany</i></div>
+        <p class="ed-item4 paddown">A personal and entrepreneurial development journey in the field of
         conflict of the rule of the hl. Benedikt to the latest findings of brain research and positive
         psychology. Contents of the modules are "The Upstalsboom Way", "Body, Mind and Language
         Awareness", "Mindfulness – Self-Perception and Self-Awareness", "The Personal Mission
@@ -82,42 +91,42 @@ Over 10 years of successful public and private sector experience with superior p
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item3">03/2018</div>
-        <div class="block-title ed-item4"><b>Coaching Curriculum - Module 1</b> - at <i>Team Benedikt, Würzburg, Germany</i></div>
-        <p class="ed-item4 paddown">Training as Business Coach - Module 1</p>
+        <div class="box-date ed-item5">03/2018</div>
+        <div class="block-title ed-item6"><b>Coaching Curriculum - Module 1</b> - at <i>Team Benedikt, Würzburg, Germany</i></div>
+        <p class="ed-item6 paddown">Training as Business Coach - Module 1</p>
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item5">11/2017</div>
-        <div class="block-title ed-item6"><b>“Klare Führung durch bewusste Sprache (Clear guidance through conscious language)”</b> - at <i>Team
+        <div class="box-date ed-item7">11/2017</div>
+        <div class="block-title ed-item8"><b>“Klare Führung durch bewusste Sprache (Clear guidance through conscious language)”</b> - at <i>Team
             Benedikt, Würzburg, Germany</i></div>
-        <p class="ed-item6 paddown">A professional approach to language as a success factor. Through conscious speech you
+        <p class="ed-item8 paddown">A professional approach to language as a success factor. Through conscious speech you
         promote clarity and motivation. The prerequisite is that your own thinking and language habits are
         reflected. The concept of conscious language combines linguistic expressions with inner attitude.
         </p>
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item7">10/2017</div>
-        <div class="block-title ed-item8"><b>„Potentialentfaltung und Kommuniaktion: 4 Tage intensiven Wachstums (Potential development
+        <div class="box-date ed-item9">10/2017</div>
+        <div class="block-title ed-item10"><b>„Potentialentfaltung und Kommuniaktion: 4 Tage intensiven Wachstums (Potential development
                   and communication 4 days of intensive growth)”</b> - at <i>Sebastian Purps-Pardigol, Aschaffenburg,
                   Germany</i>
         </div>
-        <p class="ed-item8 paddown">How to develop your own potential more - so that you can grow beyond yourself again as well as
+        <p class="ed-item10 paddown">How to develop your own potential more - so that you can grow beyond yourself again as well as
           how to support your employees and colleagues to develop their potential better - so that these
           people can grow beyond themselves again.
         </p>
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item9">from 10/2019 - 09/2017</div>
-        <div class="block-title ed-item10"><b>„Fit für die Zukunft“</b> - at <i>Public Administration of Emden, Germany</i></div>
-        <p class="ed-item10 paddown">Leadership-Training series for executive managers and executives at the public administration of Emden</p>
+        <div class="box-date ed-item11">10/2019 - 09/2017</div>
+        <div class="block-title ed-item12"><b>„Fit für die Zukunft“</b> - at <i>Public Administration of Emden, Germany</i></div>
+        <p class="ed-item12 paddown">Leadership-Training series for executive managers and executives at the public administration of Emden</p>
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item11">from 08/2005 - 07/2008</div>
-        <div class="block-title ed-item12"><b>German Diploma (FH) Administrative and Business Management (equivalent to a Bachelor
+        <div class="box-date ed-item13">08/2005 - 07/2008</div>
+        <div class="block-title ed-item14"><b>German Diploma (FH) Administrative and Business Management (equivalent to a Bachelor
                   Degree in Business Administration)</b> - at <i>Public Administration of Emden and
                   “Kommunale Fachhochschule für Verwaltung in Niedersachen”, Hannover, Germany, Germany</i></div>
 
