--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>Resume - Andre Zorn</title>
   </head>
   <body>
       <header>
