added python course

--- a/resume.html
+++ b/resume.html
@@ -80,9 +80,19 @@ Over 10 years of successful public and private sector experience with superior p
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item3">09/2018 - 06/2019</div>
-        <div class="block-title ed-item4"><b>Leadership Curriculum</b> - at <i>Upstalsboom-Curriculum; Upstalsboom Hotel + Freizeit GmbH & Co. KG, Emden, Germany</i></div>
-        <p class="ed-item4 paddown">A personal and entrepreneurial development journey in the field of
+        <div class="box-date ed-item3">05/2020</div>
+        <div class="block-title ed-item4"><b>Python for everybody</b> - at <i>University of Michigan on Coursera, USA</i></div>
+        <p class="ed-item4 paddown">This Specialization builds on the success of the Python for Everybody course and will introduce
+          fundamental programming concepts including data structures, networked application program interfaces, and databases, using
+          the Python programming language. In the Capstone Project, you’ll use the technologies learned throughout the Specialization to design
+          and create your own applications for data retrieval, processing, and visualization.
+      </p>
+      </div>
+
+      <div class="block edcontainer">
+        <div class="box-date ed-item5">09/2018 - 06/2019</div>
+        <div class="block-title ed-item6"><b>Upstalsboom Leadership Curriculum</b> - at <i>Upstalsboom Hotel + Freizeit GmbH & Co. KG, Emden, Germany</i></div>
+        <p class="ed-item6 paddown">A personal and entrepreneurial development journey in the field of
         conflict of the rule of the hl. Benedikt to the latest findings of brain research and positive
         psychology. Contents of the modules are "The Upstalsboom Way", "Body, Mind and Language
         Awareness", "Mindfulness – Self-Perception and Self-Awareness", "The Personal Mission
@@ -91,42 +101,42 @@ Over 10 years of successful public and private sector experience with superior p
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item5">03/2018</div>
-        <div class="block-title ed-item6"><b>Coaching Curriculum - Module 1</b> - at <i>Team Benedikt, Würzburg, Germany</i></div>
-        <p class="ed-item6 paddown">Training as Business Coach - Module 1</p>
+        <div class="box-date ed-item7">03/2018</div>
+        <div class="block-title ed-item8"><b>Coaching Curriculum - Module 1</b> - at <i>Team Benedikt, Würzburg, Germany</i></div>
+        <p class="ed-item8 paddown">Training as Business Coach - Module 1</p>
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item7">11/2017</div>
-        <div class="block-title ed-item8"><b>“Klare Führung durch bewusste Sprache (Clear guidance through conscious language)”</b> - at <i>Team
+        <div class="box-date ed-item9">11/2017</div>
+        <div class="block-title ed-item10"><b>“Klare Führung durch bewusste Sprache (Clear guidance through conscious language)”</b> - at <i>Team
             Benedikt, Würzburg, Germany</i></div>
-        <p class="ed-item8 paddown">A professional approach to language as a success factor. Through conscious speech you
+        <p class="ed-item10 paddown">A professional approach to language as a success factor. Through conscious speech you
         promote clarity and motivation. The prerequisite is that your own thinking and language habits are
         reflected. The concept of conscious language combines linguistic expressions with inner attitude.
         </p>
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item9">10/2017</div>
-        <div class="block-title ed-item10"><b>„Potentialentfaltung und Kommuniaktion: 4 Tage intensiven Wachstums (Potential development
+        <div class="box-date ed-item11">10/2017</div>
+        <div class="block-title ed-item12"><b>„Potentialentfaltung und Kommuniaktion: 4 Tage intensiven Wachstums (Potential development
                   and communication 4 days of intensive growth)”</b> - at <i>Sebastian Purps-Pardigol, Aschaffenburg,
                   Germany</i>
         </div>
-        <p class="ed-item10 paddown">How to develop your own potential more - so that you can grow beyond yourself again as well as
+        <p class="ed-item12 paddown">How to develop your own potential more - so that you can grow beyond yourself again as well as
           how to support your employees and colleagues to develop their potential better - so that these
           people can grow beyond themselves again.
         </p>
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item11">10/2019 - 09/2017</div>
-        <div class="block-title ed-item12"><b>„Fit für die Zukunft“</b> - at <i>Public Administration of Emden, Germany</i></div>
-        <p class="ed-item12 paddown">Leadership-Training series for executive managers and executives at the public administration of Emden</p>
+        <div class="box-date ed-item13">10/2019 - 09/2017</div>
+        <div class="block-title ed-item14"><b>„Fit für die Zukunft“</b> - at <i>Public Administration of Emden, Germany</i></div>
+        <p class="ed-item14 paddown">Leadership-Training series for executive managers and executives at the public administration of Emden</p>
       </div>
 
       <div class="block edcontainer">
-        <div class="box-date ed-item13">08/2005 - 07/2008</div>
-        <div class="block-title ed-item14"><b>German Diploma (FH) Administrative and Business Management (equivalent to a Bachelor
+        <div class="box-date ed-item15">08/2005 - 07/2008</div>
+        <div class="block-title ed-item16"><b>German Diploma (FH) Administrative and Business Management (equivalent to a Bachelor
                   Degree in Business Administration)</b> - at <i>Public Administration of Emden and
                   “Kommunale Fachhochschule für Verwaltung in Niedersachen”, Hannover, Germany, Germany</i></div>
 
