--- a/resume.html
+++ b/resume.html
@@ -75,7 +75,7 @@ Over 10 years of successful public and private sector experience with superior p
         <div class="block-title ed-item2"><b>Full-Stack Web & App Development Bootcamp</b> - at <i>WBS Coding School, Remote & Berlin, Germany</i></div>
         <p class="ed-item2 paddown">Web and App development course to become  a fully operational Full-Stack Web & App Developer in 15 weeks incl. HTML5,
           CSS3, Vanilla JavaScript (Fundamentals,DOM, OOP), REACT.js (Fundamentals, Hooks, Context), Redux, Node.js, Overview APIs (REST, GraphQL), Database (SQL, NoSQL),
-          Console, Git and Github, modile development (React Native), Desktop applications (Electron) and more.
+          Console, Git and Github, mobile development (React Native), Desktop applications (Electron) and more.
       </p>
       </div>
 
